2007-06-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_generate_pseudodata): Correct for logscale
	axes in splot.

2007-06-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (load_range): Revert change of 2004-03-15. This means
	that we do *not* clear the RANGE_REVERSE flag after applying the
	reversal. This is necessary for the upcoming "refresh" support, but
	also fixes a current bug:   
	set xrange [*:*] reverse; plot <foo>;  <zoom; zoom; unzoom>
	flag is now clear, and subsequent plots are drawn backwards

	* src/mouse.c (apply_zoom): Rework the save/restore mechanism for 
	axis ranges during zoom operations.  Preparation for "refresh"
	support.

2007-06-27  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/misc.c (iso_alloc):  Set p_count to zero when structure is
	initialized.

2007-06-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Avoid a compiler warning about null bytes in a
	format statement.

2007-06-26  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxt_update_size, wxtFrame::wxtFrame):
	* src/wxterminal/wxt_term.h:
	* term/wxt.trm:
	Add option to set the window size: 'set term wxt size width,height'

2007-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Make sure a line beginning with a number
	(i.e. a section heading) is followed immediately by a parallel entry
	beginning with '?'.  Not applied in the NEWS section, however.
	Bug #1655632

	*docs/gnuplot.texi: Sync to current doc file.

	* src/internal.c (f_sprintf): Apply LC_NUMERIC setting to all strings
	created via a call to sprintf during expression evaluation.
	Bug #1740017

2007-06-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/plot.c (inter): Cleanup: Use bail_to_command_line() instead of
	LONGJMP directly.

2007-06-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graph3d.h: Remove fields 'ticslevel' and 'xyplane_z' from 
	struct t_xyplane; replaceboth with 'z'.
